tests/ui/duplicate/duplicate-parameter.rs
fn f(a: isize, a: isize) {}
//~^ ERROR identifier `a` is bound more than once in this parameter list

fn main() {
}
